End of section 11

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -9,5 +9,10 @@
       "Microsoft": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "CloudinarySettings": {
+    "CloudName": "dvgep9wsv",
+    "ApiKey": "472436847718898",
+    "ApiSecret": "-KU0u7nctHOnKV40nHWjWhslzhw"
   }
 }
