--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data source=datingapp.db"
+    "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=123456; Database=datingapp"
   },
   "TokenKey": "super secure secret unguessable key",
   "Logging": {
